Finished OWH presentation

--- a/PedsNeph/Slides.tex
+++ b/PedsNeph/Slides.tex
@@ -181,6 +181,142 @@ last as long as possible in these disease states.
 
 \end{frame}
 
+\section{IgA Vasculitis (HSP)}\label{iga-vasculitis-hsp}
+
+\frame{\tableofcontents[hideothersubsections]}
+
+\subsection{Presentation}\label{presentation}
+
+\begin{frame}{Presentation}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Palpable purpura without thrombocytopenia
+\item
+  Arthritis/arthralgia
+\item
+  Abdominal pain
+\item
+  Renal disease
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{IgAV Rash}
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{./img/SknlsnHnchSchnlnprpIgA.jpg}
+\caption{Palpable Purpura}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}{Dorsal hand edema}
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{./img/IgAV_HSP_dorsal_edema_scale_crop.jpg}
+\caption{Dorsal hand edema}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}{Immunfluorescence}
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{./img/IgA_nephropathy_IF.jpg}
+\caption{IgAV biopsy}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}{Unusual manifestations}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Scrotal pain
+\item
+  Headache, seizures, encephalopathy
+\item
+  Respiratory signs
+\item
+  Keratitis and uveitis
+\end{itemize}
+
+\end{frame}
+
+\subsection{Management}\label{management}
+
+\begin{frame}{Management}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Maintain hydration, elevate edematous areas, etc.
+\item
+  Treat pain
+\item
+  Consider steroids
+\item
+  Hospitalize
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Outpatient management}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  NSAIDS - naproxen or ibuprofen
+\item
+  Prednisone - rarely needed
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Criteria for hospitalization}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Unable to maintain hydration
+\item
+  Severe abdominal pain
+\item
+  GI bleeding
+\item
+  Mental status changes
+\item
+  Limited self-care (secondary to joint pain)
+\item
+  Renal insufficiency
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Monitoring}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  1/3 or patients will recur at least once
+\item
+  Monitor urinalysis and BP weekly - q2w for the first 2 months after
+  presentation
+\item
+  Monitor monthly until 1 year after initial presentation
+\item
+  Check BP and UA at annual well-child visits to monitor for adult
+  disease onset
+\end{itemize}
+
+\end{frame}
+
 \section{Questions?}\label{questions}
 
 \begin{frame}{Questions? 提问题?}
