First draft spina bifida section

--- a/PedsNeph/Slides.tex
+++ b/PedsNeph/Slides.tex
@@ -21,10 +21,8 @@
 
 \begin{frame}{Family - 家庭}
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{./img/img_0002_300.jpg}
-\caption{Lovely daughters!}
+\begin{figure}
+\includegraphics[scale=0.7]{./img/img_0002_300.jpg}
 \end{figure}
 
 \end{frame}
@@ -205,30 +203,24 @@ last as long as possible in these disease states.
 
 \begin{frame}{IgAV Rash}
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{./img/SknlsnHnchSchnlnprpIgA.jpg}
-\caption{Palpable Purpura}
+\begin{figure}
+\includegraphics[scale=0.5]{./img/SknlsnHnchSchnlnprpIgA.jpg}
 \end{figure}
 
 \end{frame}
 
 \begin{frame}{Dorsal hand edema}
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{./img/IgAV_HSP_dorsal_edema_scale_crop.jpg}
-\caption{Dorsal hand edema}
+\begin{figure}
+\includegraphics[scale=0.5]{./img/IgAV_HSP_dorsal_edema_scale_crop.jpg}
 \end{figure}
 
 \end{frame}
 
 \begin{frame}{Immunfluorescence}
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{./img/IgA_nephropathy_IF.jpg}
-\caption{IgAV biopsy}
+\begin{figure}
+\includegraphics[scale=0.5]{./img/IgA_nephropathy_IF.jpg}
 \end{figure}
 
 \end{frame}
@@ -313,6 +305,179 @@ last as long as possible in these disease states.
 \item
   Check BP and UA at annual well-child visits to monitor for adult
   disease onset
+\end{itemize}
+
+\end{frame}
+
+\section{Myelomeningocele}\label{myelomeningocele}
+
+\frame{\tableofcontents[hideothersubsections]}
+
+\subsection{Case Study}\label{case-study}
+
+\begin{frame}{A Case Study}
+
+17YO African American female referred from Family Medicine clinic. Child
+followed at state Spina Bifida clinic for her whole life. During routine
+visit in the Family Medicine clinic she was discovered to have
+hypertension. Investigation revealed a hematocrit of 17mg/dL, creatinine
+of 9mg/dL. Family medicine resident immediately referred to peds
+nephrology for evaluation and treatment.
+
+\end{frame}
+
+\begin{frame}{Varieties of neurogenic bladder}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Flaccid bladder
+\item
+  High pressure bladder
+\item
+  Hyperreflexic bladder
+\item
+  Overactive sphincter
+\item
+  Detrusor sphinctor dyssynergia
+\end{itemize}
+
+\end{frame}
+
+\subsection{Assessment}\label{assessment}
+
+\begin{frame}{Assessment}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Ultrasound of kidney and bladder
+\item
+  Urodynamics (voiding cystourethrogram, cystometrogram/EMG)
+\item
+  Consider DMSA/MAG3 renal scan
+\item
+  Urine culture
+\end{itemize}
+
+\end{frame}
+
+\subsection{Management}\label{management-2}
+
+\begin{frame}{Management}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Clean intermittent catheterization
+\item
+  Consider anticholinergics
+\item
+  UTIs
+\item
+  Bowel management
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Management - CIC}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Mainstay of therapy
+\item
+  Clean, not sterile
+\item
+  Start early (\textless{} 1YO)
+\item
+  Lanzhou approach != Alabama approach
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Management - Anticholinergics}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Oxybutynin (Ditropan)
+
+  \begin{itemize}
+  \itemsep1pt\parskip0pt\parsep0pt
+  \item
+    \textless{} 12m - 0.1mg/kg tid
+  \item
+    1-5YO 0.2mg/kg tid
+  \item
+    for \textgreater{} 5YO 5mg tabs tid, consider the transdermal
+    preparation
+  \end{itemize}
+\item
+  Tolterodine (Detrol)
+
+  \begin{itemize}
+  \itemsep1pt\parskip0pt\parsep0pt
+  \item
+    for \textgreater{} 5YO children
+  \item
+    1-2mg bid
+  \end{itemize}
+\item
+  Both have long acting forms suitable for older children
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Management - UTI}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Cloudy, smelly urine
+
+  \begin{itemize}
+  \itemsep1pt\parskip0pt\parsep0pt
+  \item
+    Increase fluids
+  \item
+    Increase frequency of CIC
+  \item
+    Not necessarily a UTI
+  \end{itemize}
+\item
+  UTI symptoms
+
+  \begin{itemize}
+  \itemsep1pt\parskip0pt\parsep0pt
+  \item
+    pain during CIC
+  \item
+    gross hematuria
+  \item
+    back or belly pain
+  \item
+    lethargy (think shunt malfunction too)
+  \item
+    fever (think about that shunt!
+  \item
+    vomiting (more shunt worries)
+  \end{itemize}
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Management - Bowel}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Neurogenic bowel a common co-morbidity
+\item
+  Most commonly constipated, may have laxity of anal sphincter
+\item
+  Goal of therapy is timed elimination, use laxatives, suppositories,
+  enemas, etc.
 \end{itemize}
 
 \end{frame}
