Final edit of PedsNeph Talk

--- a/PedsNeph/Slides.tex
+++ b/PedsNeph/Slides.tex
@@ -22,7 +22,7 @@
 \begin{frame}{Family - 家庭}
 
 \begin{figure}
-\includegraphics[scale=0.7]{./img/img_0002_300.jpg}
+\includegraphics[scale=0.3]{./img/siblingsday.jpg}
 \end{figure}
 
 \end{frame}
@@ -364,7 +364,7 @@ nephrology for evaluation and treatment.
 
 \subsection{Management}\label{management-2}
 
-\begin{frame}{Management}
+\begin{frame}{Management - 4 Aspects}
 
 \begin{itemize}
 \itemsep1pt\parskip0pt\parsep0pt
@@ -459,7 +459,7 @@ nephrology for evaluation and treatment.
   \item
     lethargy (think shunt malfunction too)
   \item
-    fever (think about that shunt!
+    fever (think about that shunt!)
   \item
     vomiting (more shunt worries)
   \end{itemize}
